--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Richie Web",
-  "name": "Richie Bendall's Website",
+  "short_name": "Send",
+  "name": "Send To Richie Bendall",
 
   "icons": [{
       "src": "/images/favicons/android-chrome-36x36.png",
